--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       <button id="simularBtn">Simular Crédito</button>
       <button id="limpiarDatosBtn">Limpiar Datos</button>
 
+      <section id="consejo-container">
+        <h3>Consejo financiero del día:</h3>
+        <p id="consejo">Cargando consejo...</p>
+      </section>      
+
+    </div>
+
     </div>
 
     <div class="card hidden" id="resultadoSimulacion">
@@ -68,6 +75,7 @@
         </thead>
         <tbody></tbody>
       </table>
+
     </div>
 
     <script src="main.js"></script>
