--- a/index.html
+++ b/index.html
@@ -75,9 +75,21 @@
         </thead>
         <tbody></tbody>
       </table>
-
     </div>
 
+          <!-- Sidebar -->
+<aside id="sidebarInfo">
+  <h3>🌤 Clima Actual</h3>
+  <div id="infoClima" class="info-box"></div>
+
+  <h3>💱 Valores en tiempo real</h3>
+  <div id="infoMonedas" class="info-box"></div>
+</aside>
+
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="main.js"></script>
+
   </body>
 </html>
